# qxg_platform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: model_profiles.yaml  realtime.yaml  slow_tracker.yaml  video.yaml
docs/: artifacts.md  productionization.md
src/qxg_platform/: __init__.py  cli.py  config.py  detection.py  domain.py  gui.py  inputs.py  platform.py  qualinet.py  qxg_builder.py  qxg_core.py  qxg_export.py  relevance.py  serialization.py  server.py  visualization.py  yolo_models.py
tests/: test_config.py  test_depth_estimation.py  test_detection_duplicates.py  test_qualinet.py  test_qxg_builder.py  test_qxg_core.py  test_qxg_export.py  test_recording.py  test_serialization.py  test_tracker_config.py  test_yolo_models.py
