[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qxg-platform"
version = "0.1.0"
description = "Productionized qualitative explainable graph platform for video perception."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "QXG Platform Maintainers" }]
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "PyYAML>=6.0",
  "flask>=3.0",
  "requests>=2.31",
]

[project.optional-dependencies]
ml = [
  "torch>=2.1",
  "torchvision>=0.16",
  "ultralytics>=8.2",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "pandas>=2.0",
]
realsense = ["pyrealsense2>=2.55"]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8",
]

[project.scripts]
qxg = "qxg_platform.cli:main"
qxg-server = "qxg_platform.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
